--- a/CustomControlSELabel/Themes/Generic.xaml
+++ b/CustomControlSELabel/Themes/Generic.xaml
@@ -2,13 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:CustomControlSELabel">
-
+   
     <Style TargetType="{x:Type local:SELabel}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
-                        <Label Content="Hello SELabel Control!"/>
+                        <Label Content="Hello SELabel Control!!!!"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
