--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -1,8 +1,8 @@
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:CustomControlSELabel">
-   
+    xmlns:local="clr-namespace:SELabelControl">
+    
     <Style TargetType="{x:Type local:SELabel}">
         <Setter Property="Template">
             <Setter.Value>
@@ -14,4 +14,5 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
 </ResourceDictionary>
