ISELabelItemのプロパティを{Get;Set;}に変更

--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CustomControlSELabel"
+        xmlns:local="clr-namespace:SELabelControl;assembly=SELabelControl"
         mc:Ignorable="d"
         Title="MainWindow" Height="300" Width="400">
     <Grid x:Name="grid">
@@ -22,9 +22,9 @@
         <TextBox Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
 
         <!--SELable-->
-        <!--<local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1"/>-->
+        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1"/>
 
-        <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox 2" Background="PaleGreen"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox2" Background="PaleGreen"/>
 
     </Grid>
 </Window>
