--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -8,7 +8,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
-                        <Label Content="Hello SELabel Control!!!!again"/>
+                        <Label Content="{Binding Item.DisplayString}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
