--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -4,11 +4,12 @@
     xmlns:local="clr-namespace:SELabelControl">
     
     <Style TargetType="{x:Type local:SELabel}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
-                        <Label Content="{Binding Item.DisplayString}"/>
+                        <Label Content="{Binding Item.DisplayString}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
