--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -20,7 +20,7 @@
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
                         <Label x:Name="labelItem" Content="{ Binding Item }" />
-                        <TextBox x:Name="textBoxKeyword" Text="Textbox"  Background="AliceBlue" Opacity="0.5"/>
+                        <TextBox x:Name="textBoxKeyword" Text="Textbox" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
