--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -19,7 +19,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
-                        <Label x:Name="labelItem" Content="{ Binding RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type local:SELabel}},Path=SxValue }" />
+                        <Label x:Name="labelItem" Content="{ Binding RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type local:SELabel}},Path=SeValue }" />
                         <TextBox x:Name="textBoxKeyword"/>
                     </Grid>
                 </ControlTemplate>
