--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -19,12 +19,13 @@
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
+        <TextBox x:Name="message" Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
 
         <!--SELable-->
-        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" SeValue="{Binding Item}"/>
+        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" SeValue="{Binding Item, Mode=TwoWay }"/>
 
         <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox2" Background="PaleGreen"/>
+        <Button x:Name="button" Content="Button" Click="button_Click"/>
 
     </Grid>
 </Window>
