--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SELabelControl;assembly=SELabelControl"
+        xmlns:vm="clr-namespace:TestViewModel;assembly=TestViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="400" Width="400">
+    <Window.DataContext>
+        <vm:ViewModel/>
+    </Window.DataContext>
     <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -22,7 +26,9 @@
         <TextBox x:Name="message" Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
 
         <!--SELable-->
-        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" SeValue="{Binding Item, Mode=TwoWay }" />
+        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" 
+                       SeValue="{Binding Item, Mode=TwoWay }"
+                       SelItems="{x:Static vm:ViewModel.SelItems}"/>
 
         <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox2" Background="PaleGreen"/>
         <Button x:Name="button" Content="Button" Click="button_Click"/>
