PrifixSearchプロパティ　trueで前方一致検索 falseで中間一致検索（デフォルト)

--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -30,11 +30,11 @@
         <TextBox x:Name="message" Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
 
         <!--SELable-->
-        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" FontSize="12" FontFamily="Meiryo UI" SnapsToDevicePixels="True"
-                       Background="Transparent"
+        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" FontSize="12" FontFamily="Meiryo UI" SnapsToDevicePixels="True"                       
                        SeValue="{Binding Item, Mode=TwoWay }"
                        SeItems="{x:Static vm:ViewModel.SeItems}"
-                       KanaConverter="{StaticResource kanaConv}"/>
+                       KanaConverter="{StaticResource kanaConv}"
+                       PrifixSearch="True"/>
 
         <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox2" Background="PaleGreen"/>
         <Button x:Name="button" Content="Button" Click="button_Click"/>
