--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -33,7 +33,7 @@
         <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" FontSize="12" FontFamily="Meiryo UI" SnapsToDevicePixels="True"                       
                        SeValue="{Binding Item, Mode=TwoWay }"
                        SeItems="{x:Static vm:ViewModel.SeItems}"
-                       
+                       KanaConverter="{StaticResource kanaConv}"
                        PrifixSearch="True"/>
 
         <TextBox Grid.Row="2" Grid.Column="1" Text="Dummy TextBox2" Background="PaleGreen"/>
