--- a/SELabelControl/Themes/Generic.xaml
+++ b/SELabelControl/Themes/Generic.xaml
@@ -18,6 +18,9 @@
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="LightBlue"/>
             </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="AliceBlue"/>
+            </Trigger>
         </Style.Triggers>
     </Style>
 
@@ -27,12 +30,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:SELabel}">
                     <Grid>
-                        <Label x:Name="labelItem" />
-                        <TextBox x:Name="textBoxKeyword" Background="Transparent"/>
+                        <Label x:Name="labelItem"/>
+                        <TextBox x:Name="textBoxKeyword"/>
                         <Popup x:Name="popup" 
                                Width="{Binding ElementName=textBoxKeyword, Path=ActualWidth}">
-                            <ScrollViewer>
-                                <ListBox x:Name="listBox" FocusVisualStyle="{x:Null}" ItemContainerStyle="{StaticResource ListBoxItemStyle}"/>
+                            <ScrollViewer Background="White">
+                                <ListBox x:Name="listBox" 
+                                         Background="Transparent"
+                                         FocusVisualStyle="{x:Null}" 
+                                         ItemContainerStyle="{StaticResource ListBoxItemStyle}"/>
                             </ScrollViewer>
                         </Popup>
                     </Grid>
