--- a/CustomControlSELabel/MainWindow.xaml
+++ b/CustomControlSELabel/MainWindow.xaml
@@ -30,7 +30,11 @@
         <TextBox x:Name="message" Grid.Row="0" Grid.Column="1" Text="Dummy TextBox 1" Background="PaleGreen"/>
 
         <!--SELable-->
-        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" FontSize="12" FontFamily="Meiryo UI" SnapsToDevicePixels="True"                  
+        <local:SELabel x:Name="seLabel" Grid.Row="1" Grid.Column="1" SnapsToDevicePixels="True"  
+                       FontSize="12" 
+                       FontFamily="Meiryo UI"
+                       VerticalContentAlignment="Center"
+                       HorizontalContentAlignment="Left"
                        SeValue="{Binding Item, Mode=TwoWay }"
                        SeItems="{x:Static vm:ViewModel.SeItems}"
                        KanaConverter="{StaticResource kanaConv}"
